--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,55 +1,99 @@
 <!DOCTYPE html>
-<html lang="en">
+<html th:lang="|${#locale.language}-${#locale.country}|"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="style-prod.css">
+    <script src="https://unpkg.com/htmx.org@1.9.12" integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2" crossorigin="anonymous"></script>
 </head>
-<body class="">
-<div class="artboard artboard-horizontal phone-6 content-center">
-        <h1 class="text-3xl font-bold">Welcome to Spring Boot + Thymeleaf + Tailwind Css</h1>
-        <!-- Hero -->
-        <div class="hero min-h-screen bg-base-200">
-            <div class="hero-content text-center">
-                <div class="max-w-md">
-                    <h1 class="text-5xl font-bold">Hello there</h1>
-                    <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-                    <button class="btn btn-primary">Get Started</button>
+<body>
+<div layout:fragment="content" class="container mx-auto mt-10">
+    <div class="flex flex-col gap-4">
+        <div class="flex justify-center">
+            <h1 id="text-9xl font-black">Spring Boot + Tailwind CSS + DaisyUI + HTMX</h1>
+        </div>
+
+        <div class="overflow-x-auto">
+            <table class="table table-zebra">
+                <!-- head -->
+                <thead>
+                <tr>
+                    <th></th>
+                    <th>Name</th>
+                    <th>Description</th>
+                    <th>IP Address</th>
+                </tr>
+                </thead>
+                <tbody>
+                <!-- row 1 -->
+                <tr class="machines" th:each="machine : ${machines}">
+                    <th class="machine-id" th:text="${machine.getId()}">1</th>
+                    <td class="machine-name" th:text="${machine.getName()}">Cy Ganderton</td>
+                    <td class="machine-description" th:text="${machine.getDescription()}">Quality Control Specialist</td>
+                    <td th:class="machine-ip" th:text="${machine.getIpAddress()}">Blue</td>
+                    <td class="buttons">
+                        <button
+                            class="btn btn-outline btn-error btn-sm"
+                            th:attr="hx-delete=@{/machines/{id}(id=${machine.id})}"
+                            hx-swap="outerHTML"
+                            hx-target="closest .machines"
+                        >
+                            Delete
+                        </button>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="float-right bg-amber-400 p-2">
+            <div id="message">Request Info</div>
+        </div>
+        <h1 class="text-2xl mb=4">Trigger Demo</h1>
+        <h2 class="text-xl mb-2">Standard Events</h2>
+        <div class="mb-4">
+            <div class="text-sm">Button is triggered by the <code class="font-mono">Click</code> event.</div>
+            <button class="btn btn-outline btn-primary"
+                    th:hx-get="@{/htmx}"
+                    hx-target="#message">Click me</button>
+        </div>
+        <div class="mb-4">
+            <div class="text-sm">Input, textarea and select fields are triggered by the <code class="font-mono">change</code> event (For input and textarea, this triggers when you move the focus out of the input).</div>
+            <div>
+                <div>
+                    <div>Input</div>
+                    <input id="my-text-input-id"
+                           type="text"
+                           name="my-text-input-name"
+                           class="mb-2"
+                           th:hx-get="@{/htmx}"
+                           hx-target="#message" />
                 </div>
+                <div>
+                    <div>Textarea</div>
+                    <textarea th:hx-get="@{/htmx}"
+                              hx-target="#message"></textarea>
+                </div>
+                <div>Select</div>
+                <select th:hx-get="@{/htmx}"
+                        hx-target="#message">
+                    <option>Choice 1</option>
+                    <option>Choice 2</option>
+                    <option>Choice 3</option>
+                </select>
             </div>
         </div>
-        <!-- End Hero -->
-        <button class="inline-bloc cursor-pointer rounded-md bg-gray-800 px-4 py-3 text-center text-sm font-semibold uppercase text-white transition duration-200 ease-in-out hover:bg-gray-900">
-            Click Me
-        </button>
-        <!-- Footer -->
-        <footer class="footer p-10 bg-base-200 text-base-content">
-            <aside>
-                <svg width="50" height="50" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" class="fill-current"><path d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z"></path></svg>
-                <p>ACME Industries Ltd.<br>Providing reliable tech since 1992</p>
-            </aside>
-            <nav>
-                <h6 class="footer-title">Services</h6>
-                <a class="link link-hover">Branding</a>
-                <a class="link link-hover">Design</a>
-                <a class="link link-hover">Marketing</a>
-                <a class="link link-hover">Advertisement</a>
-            </nav>
-            <nav>
-                <h6 class="footer-title">Company</h6>
-                <a class="link link-hover">About us</a>
-                <a class="link link-hover">Contact</a>
-                <a class="link link-hover">Jobs</a>
-                <a class="link link-hover">Press kit</a>
-            </nav>
-            <nav>
-                <h6 class="footer-title">Legal</h6>
-                <a class="link link-hover">Terms of use</a>
-                <a class="link link-hover">Privacy policy</a>
-                <a class="link link-hover">Cookie policy</a>
-            </nav>
-        </footer>
-        <!-- End Footer -->
+        <div class="mb-4">
+            <div class="text-sm">Forms are triggered by the <code class="font-mon">submit</code> event.</div>
+            <form th:hx-get="@{/htmx}"
+                  hx-target="#message">
+                <input type="text" name="form-text-input" />
+                <button class="btn btn-ghost" type="submit">Submit</button>
+                <button class="btn btn-outline btn-warning">Reset</button>
+            </form>
+        </div>
+    </div>
 </div>
 </body>
 </html>
