--- a/src/main/resources/templates/layout/main.html
+++ b/src/main/resources/templates/layout/main.html
@@ -6,10 +6,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title></title>
+        <link rel="stylesheet" href="style-prod.css">
+        <script src="https://unpkg.com/htmx.org@1.9.12" integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2" crossorigin="anonymous"></script>
     </head>
     <body>
-        <main layout:fragment="content">
-        </main>
+        <h1 class="text-9xl">Main Layout</h1>
+        <section layout:fragment="content">
+        </section>
         <script type="text/javascript" th:src="@{/webjars/htmx.org/dist/htmx.min.js}"></script>
     </body>
 </html>
