--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,10 +5,10 @@
       layout:decorate="~{layout/main}"
 >
 <body>
-    <section layout:fragment="content" class="container w-full justify-center">
+    <section layout:fragment="content" class="container w-full justify-center z-0">
         <div class="mx-auto max-w-2xl mt-4">
             <div class="flex justify-center">
-                <h1 id="text-9xl font-black">Spring Boot + Tailwind CSS + DaisyUI + HTMX</h1>
+                <h1 id="text-xl font-black">Spring Boot + Tailwind CSS + DaisyUI + HTMX</h1>
             </div>
 
             <div class="overflow-x-auto">
@@ -40,86 +40,55 @@
                     </tr>
                     </tbody>
                 </table>
-                <div th:fragment="machine-form" id="machine-form" hx-swap-oob="true" class="flex flex-col gap-1 mt-10 mb-10 gap-2">
-                    <div></div>
-                    <div class="w-full flex justify-center px-3 items-stretch">
-                        <label class="input input-bordered flex items-center gap-2">
-                            Machine Name
-                            <input type="text" class="grow" placeholder="Machine name" name="machineName" id="machineName" />
-                        </label>
-                    </div>
-                    <div class="w-full flex justify-center px-3">
-                        <label class="input input-bordered flex items-center gap-2">
-                            Name
-                            <input type="text" class="grow" placeholder="Machine description" name="machineDescription" id="machineDescription" />
-                        </label>
-                    </div>
-                    <div class="w-full flex justify-center px-3">
-                        <label class="input input-bordered flex items-center gap-2">
-                            Name
-                            <input type="text" class="grow" placeholder="10.0.2.1" name="machineIp" id="machineIp"/>
-                        </label>
-                    </div>
-                    <div class="w-full flex justify-center">
-                        <button class="btn btn-primary" type="submit"
-                                th:hx-post="@{/machines}" hx-include="#machineName, #machineDescription, #machineIp"
-                                hx-target="#machines"
-                        >Submit</button>
-                    </div>
-                </div>
-                <div class="w-full justify-center">
-                    <button class="btn btn-error"
+                <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+                    <button class="btn btn-error btn-outline btn-sm"
                             th:hx-post="@{/machines/reset}"
                             hx-target="#machines"
                     >Reset</button>
                 </div>
+                <!-- Machine Form -->
+                <div class="flex min-h-full flex-col justify-center px-6 py-6 lg:px-8">
+                    <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+                        <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-white">Add New Machine</h2>
+                    </div>
+                    <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm"  th:fragment="machine-form"
+                         id="machine-form" hx-swap-oob="true">
+                        <form class="space-y-6">
+                            <div>
+                                <label for="machineName" class="block text-sm font-medium leading-6 text-white">Machine Name</label>
+                                <div class="mt-2">
+                                    <input id="machineName" name="machineName" type="text" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                                </div>
+                            </div>
+                            <div>
+                                <div class="flex items-center justify-between">
+                                    <label for="machineDescription" class="block text-sm font-medium leading-6 text-white">Description</label>
+                                </div>
+                                <div class="mt-2">
+                                    <input id="machineDescription" name="machineDescription" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                                </div>
+                            </div>
 
-            </div>
-            <div class="float-right bg-amber-400 p-2">
-                <div id="message" class="text-white text-2xl font-bold">Request Info</div>
-            </div>
-            <h1 class="text-2xl mb=4">Trigger Demo</h1>
-            <h2 class="text-xl mb-2">Standard Events</h2>
-            <div class="mb-4">
-                <div class="text-sm">Button is triggered by the <code class="font-mono">Click</code> event.</div>
-                <button class="btn btn-outline btn-primary"
-                        th:hx-get="@{/htmx}"
-                        hx-target="#message">Click me</button>
-            </div>
-            <div class="mb-4">
-                <div class="text-sm">Input, textarea and select fields are triggered by the <code class="font-mono">change</code> event (For input and textarea, this triggers when you move the focus out of the input).</div>
-                <div>
-                    <div>
-                        <div>Input</div>
-                        <input id="my-text-input-id"
-                               type="text"
-                               name="my-text-input-name"
-                               class="mb-2"
-                               th:hx-get="@{/htmx}"
-                               hx-target="#message" />
+                            <div>
+                                <div class="flex items-center justify-between">
+                                    <label for="machineIp" class="block text-sm font-medium leading-6 text-white">IP Address</label>
+                                </div>
+                                <div class="mt-2">
+                                    <input id="machineIp" name="machineIp" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                                </div>
+                            </div>
+
+                            <div>
+                                <button
+                                        type="submit"
+                                        class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+                                        th:hx-post="@{/machines}" hx-include="#machineName, #machineDescription, #machineIp"
+                                        hx-target="#machines"
+                                >Sign in</button>
+                            </div>
+                        </form>
                     </div>
-                    <div>
-                        <div>Textarea</div>
-                        <textarea th:hx-get="@{/htmx}"
-                                  hx-target="#message"></textarea>
-                    </div>
-                    <div>Select</div>
-                    <select th:hx-get="@{/htmx}"
-                            hx-target="#message">
-                        <option>Choice 1</option>
-                        <option>Choice 2</option>
-                        <option>Choice 3</option>
-                    </select>
                 </div>
-            </div>
-            <div class="mb-4">
-                <div class="text-sm">Forms are triggered by the <code class="font-mon">submit</code> event.</div>
-                <form th:hx-get="@{/htmx}"
-                      hx-target="#message">
-                    <input type="text" name="form-text-input" />
-                    <button class="btn btn-ghost" type="submit">Submit</button>
-                    <button class="btn btn-outline btn-warning">Reset</button>
-                </form>
             </div>
         </div>
     </section>
