Monday 30 April Evening

--- a/src/main/resources/templates/layout/main.html
+++ b/src/main/resources/templates/layout/main.html
@@ -29,7 +29,7 @@
                                 <li><a href="/" target="_self">Home</a></li>
                                 <li><a href="/users" target="_self">Users</a></li>
                                 <li><a href="/machines" target="_self">Machines</a></li>
-
+                                <li><a href="/plans" target="_self">Plans</a></li>
                             </ul>
                         </div>
                     </div>
