--- a/src/main/resources/templates/layout/main.html
+++ b/src/main/resources/templates/layout/main.html
@@ -8,6 +8,14 @@
         <title></title>
         <link rel="stylesheet" th:href="@{style-prod.css}">
         <script src="https://unpkg.com/htmx.org@1.9.12" integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.js" defer></script>
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" />
+        <style>
+            [x-cloak] {
+                display: none;
+            }
+        </style>
     </head>
     <body data-theme="ame_theme">
         <section>
@@ -17,7 +25,6 @@
                         <input id="my-drawer" type="checkbox" class="drawer-toggle" />
                         <div class="drawer-content">
                             <!-- Page content here -->
-<!--                            <label for="my-drawer" class="btn btn-ghost drawer-button">Open drawer</label>-->
                             <label  for="my-drawer" class="btn btn-square btn-ghost drawer-button">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-5 h-5 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
                             </label>
@@ -36,12 +43,12 @@
 
                 </div>
                 <div class="flex-1">
-                    <a class="btn btn-ghost text-xl">daisyUI</a>
+                    <a class="btn btn-ghost text-xl">Optimizer 2.1</a>
                 </div>
                 <div class="flex-none">
-                    <button class="btn btn-square btn-ghost">
+                    <a class="btn btn-square btn-ghost">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-5 h-5 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h.01M12 12h.01M19 12h.01M6 12a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0z"></path></svg>
-                    </button>
+                    </a>
                 </div>
             </div>
 
@@ -78,6 +85,8 @@
                 </nav>
             </footer>
         </section>
-<!--        <script type="text/javascript" th:src="@{/webjars/htmx.org/dist/htmx.min.js}"></script>-->
+        <!-- For Datepicker -->
+
+        <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     </body>
 </html>
