--- a/src/main/resources/templates/plans/new_plan.html
+++ b/src/main/resources/templates/plans/new_plan.html
@@ -10,33 +10,41 @@
             <div class="grid grid-cols-3 gap-6 mt-10">
                 <div class="col-span-3" >New Plan</div>
 
-                <label>Description</label>
                 <input id="plan-description" type="text" name="plan-description"
-                       class="input input-bordered w-full max-w-xs col-span-2"
+                       class="input input-bordered w-full col-span-3"
                        placeholder="Description"
                        th:field="*{description}"
                 />
 
-                <label>Start Date</label>
-                <div class="col-span-2">
-                    <div th:insert="~{fragments/datepicker :: datepicker(${year}, ${month}, ${day}, ${firstDay}, ${lastDay})}"
-                         th:remove="tag">
-                    </div>
+                <div class="flatpickr relative h-10 w-full min-w-[200px]">
+                    <input
+                            id="start-date-picker"
+                            class="date-picker peer input input-bordered input-sm items-center"
+                            placeholder=" "
+                    />
+                    <label class="before:content[' '] after:content[' '] pointer-events-none absolute left-0 -top-1.5 flex h-full w-full select-none !overflow-visible truncate text-[11px] font-normal leading-tight text-gray-500 transition-all before:pointer-events-none before:mt-[6.5px] before:mr-1 before:box-border before:block before:h-1.5 before:w-2.5 before:rounded-tl-md before:border-t before:border-l before:border-blue-gray-200 before:transition-all after:pointer-events-none after:mt-[6.5px] after:ml-1 after:box-border after:block after:h-1.5 after:w-2.5 after:flex-grow after:rounded-tr-md after:border-t after:border-r after:border-blue-gray-200 after:transition-all peer-placeholder-shown:text-sm peer-placeholder-shown:leading-[3.75] peer-placeholder-shown:text-blue-gray-500 peer-placeholder-shown:before:border-transparent peer-placeholder-shown:after:border-transparent peer-focus:text-[11px] peer-focus:leading-tight peer-focus:text-gray-900 peer-focus:before:border-t-2 peer-focus:before:border-l-2 peer-focus:before:!border-gray-900 peer-focus:after:border-t-2 peer-focus:after:border-r-2 peer-focus:after:!border-gray-900 peer-disabled:text-transparent peer-disabled:before:border-transparent peer-disabled:after:border-transparent peer-disabled:peer-placeholder-shown:text-blue-gray-500">
+                        Start Date
+                    </label>
                 </div>
 
-                <label>Run Date</label>
-                <div class="col-span-2">
-                    <div th:insert="~{fragments/datepicker :: datepicker(${year}, ${month}, ${day}, ${firstDay}, ${lastDay})}"
-                         th:remove="tag">
-                    </div>
+                <div class="flatpickr relative h-10 w-full min-w-[200px]">
+                    <input
+                            id="run-date-picker"
+                            class="date-picker peer input input-bordered input-sm items-center"
+                            placeholder=" "
+                    />
+                    <label class="before:content[' '] after:content[' '] pointer-events-none absolute left-0 -top-1.5 flex h-full w-full select-none !overflow-visible truncate text-[11px] font-normal leading-tight text-gray-500 transition-all before:pointer-events-none before:mt-[6.5px] before:mr-1 before:box-border before:block before:h-1.5 before:w-2.5 before:rounded-tl-md before:border-t before:border-l before:border-blue-gray-200 before:transition-all after:pointer-events-none after:mt-[6.5px] after:ml-1 after:box-border after:block after:h-1.5 after:w-2.5 after:flex-grow after:rounded-tr-md after:border-t after:border-r after:border-blue-gray-200 after:transition-all peer-placeholder-shown:text-sm peer-placeholder-shown:leading-[3.75] peer-placeholder-shown:text-blue-gray-500 peer-placeholder-shown:before:border-transparent peer-placeholder-shown:after:border-transparent peer-focus:text-[11px] peer-focus:leading-tight peer-focus:text-gray-900 peer-focus:before:border-t-2 peer-focus:before:border-l-2 peer-focus:before:!border-gray-900 peer-focus:after:border-t-2 peer-focus:after:border-r-2 peer-focus:after:!border-gray-900 peer-disabled:text-transparent peer-disabled:before:border-transparent peer-disabled:after:border-transparent peer-disabled:peer-placeholder-shown:text-blue-gray-500">
+                        Run Date
+                    </label>
                 </div>
-
-                <label>Priority</label>
-                <input id="plan-data-path" type="text" name="plan-data-path"
-                       class="input input-bordered w-full max-w-xs col-span-2"
-                       placeholder="WPCS Data path"
-                       th:field="*{priority}"
-                />
+                <label class="priority">
+                    <select class="select select-bordered w-full max-w-xs  col-span-2">
+                        <option th:each="priority : ${priorities}" th:text="${priority}" th:value="${priority}"></option>
+                    </select>
+                    <div class="label">
+                        <span class="label-text-alt">Priority</span>
+                    </div>
+                </label>
 
                 <div class="w-full"> </div>
                 <div class="mx-auto w-full ">
@@ -53,6 +61,26 @@
 
             </div>
         </form>
+        <script>
+            const datepicker = flatpickr(".date-picker", {});
+
+            // styling the date picker
+            const calendarContainer = datepicker.calendarContainer;
+            const calendarMonthNav = datepicker.monthNav;
+            const calendarNextMonthNav = datepicker.nextMonthNav;
+            const calendarPrevMonthNav = datepicker.prevMonthNav;
+            const calendarDaysContainer = datepicker.daysContainer;
+
+            calendarContainer.className = `${calendarContainer.className} bg-white p-4 border border-blue-gray-50 rounded-lg shadow-lg shadow-blue-gray-500/10 font-sans text-sm font-normal text-blue-gray-500 focus:outline-none break-words whitespace-normal`;
+
+            calendarMonthNav.className = `${calendarMonthNav.className} flex items-center justify-between mb-4 [&>div.flatpickr-month]:-translate-y-3`;
+
+            calendarNextMonthNav.className = `${calendarNextMonthNav.className} absolute !top-2.5 !right-1.5 h-6 w-6 bg-transparent hover:bg-blue-gray-50 !p-1 rounded-md transition-colors duration-300`;
+
+            calendarPrevMonthNav.className = `${calendarPrevMonthNav.className} absolute !top-2.5 !left-1.5 h-6 w-6 bg-transparent hover:bg-blue-gray-50 !p-1 rounded-md transition-colors duration-300`;
+
+            calendarDaysContainer.className = `${calendarDaysContainer.className} [&_span.flatpickr-day]:!rounded-md [&_span.flatpickr-day.selected]:!bg-gray-900 [&_span.flatpickr-day.selected]:!border-gray-900`;
+        </script>
     </div>
 </body>
 </html>
